Add meta tag and html lang attribute to index.html, add and link script.js

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
-  <head> </head>
-  <body>
-    <h1>CIS 223 - Blank Template</h1>
-  </body>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <script src="script.js" defer></script>
+  </head>
+  <body></body>
 </html>
