--- a/index.html
+++ b/index.html
@@ -4,5 +4,7 @@
     <meta charset="utf-8" />
     <script src="script.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <h1>Claudia's Timer :)</h1>
+  </body>
 </html>
